tests/errors/runtime.WrongArgumentType.1.res
>> Runtime | File: runtime.WrongArgumentType.1.art
     error | Line: 5
           | 
           | cannot perform map -> :block :integer
           | incorrect argument type for second parameter
           | accepts :null :literal :block